k8s/ingress/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adome-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
    nginx.ingress.kubernetes.io/upgrade: "websocket"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  
  tls:
    - hosts:
        - adome.codewithjoe.in
      secretName: adome-theadome-tls
  rules:
    - host: adome.theadome.xyz
      http:
        paths:
          - path: /tenant(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tenant-service
                port:
                  number: 8000
          - path: /user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /mediamanager(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: media-service
                port:
                  number: 8000
          - path: /media(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: media-service
                port:
                  number: 8000
          - path: /payment(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 8000
          - path: /blog(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: blog-service
                port:
                  number: 8000
          - path: /builder(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: webbuilder-service
                port:
                  number: 8000
          - path: /static(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: media-service
                port:
                  number: 8000
          - path: /comment(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: comment-service
                port:
                  number: 8000
          - path: /course(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-service
                port:
                  number: 8000
          - path: /community(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: community-service
                port:
                  number: 8000
